--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!doctype HTML>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>module2-solution</title>
+  </head>
+  <body>
+    <h1>Heading</h1>
+  </body>
